--- a/home/templates/ourproduction.html
+++ b/home/templates/ourproduction.html
@@ -120,6 +120,7 @@
             <P class="text-xs text-gray-500 mb-2">Remix by - Thusith Niroshana | T-Lab Studios  </P>
           </div>
       </div>
+      <a class="text-xs text-gray-300 text-center px-6 m-3" href="https://youtube.com/playlist?list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB&feature=shared">Click here to for more original songs</a
   </div>
   
   </section>
