--- a/home/templates/ourproduction.html
+++ b/home/templates/ourproduction.html
@@ -85,7 +85,7 @@
             <h2 class="text-xs text-gray-300 mt-2">හිතාගන්න බැරි මොහොතක් | Hithaganna Bari mohothak</h2>
             <P class="text-xs text-gray-500 mb-2">Music | Thusith Niroshana (T-Lab)</P>
           </div>
-          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 items-center ">
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
             <iframe src="https://www.youtube.com/embed/3vvx40QgRMo?si=56OUWT4bhU_c084o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
             <h2 class="text-xs text-gray-300 mt-2">Maggi Papare 30 Sec TVC</h2>
             <P class="text-xs text-gray-500 mb-2">Music | Thusith Niroshana (T-Lab)</P>
@@ -99,28 +99,38 @@
     <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mt-3 mb-5 text-white">Original Songs</h3>
     <div class="container mx-auto p-4 px-8">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
+        <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+          <iframe  src="https://www.youtube.com/embed/jAGEfhsHERs?si=VHtZAgJoVjx70by6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>           
+          <h2 class="text-xs text-gray-300 mt-4 font-bold">Happy Birthday Song - උපන් දිනය - Centigradz ( Music Video</h2>
+           <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana | T-Lab studios </P>
+        </div>
+        <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+          <iframe  src="https://www.youtube.com/embed/1Cbohsb8cp0?si=wVWJRMT2iD2GS5a9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>          
+          <h2 class="text-xs text-gray-300 mt-4 font-bold">Billa One Shot ( බිල්ලා ) - CENTIGRADZ</h2>
+           <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana | Mix & Mastered By Thusith Niroshana  </P>
+        </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
             <iframe src="https://www.youtube.com/embed/eAPcXyJyi9U?si=ntJvAsfuStRKgDpz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
              <h2 class="text-xs text-gray-300 mt-4 font-bold">Arjun x Piyal - Oye Ojaye (Official Music Video)</h2>
              <P class="text-xs text-gray-500 mb-2">Music Production - Thusith Niroshana | T-Lab Studios </P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/9asbrzM24jA?si=FU2xNLLuKp4P7LjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-4">Mal Mal Sariya (මල් මල් සාරිය) | by Sandalindu Duggannarala (Official Lyric Video)</h2>
-            <P class="text-xs text-gray-500 mb-2">Music composed & Mix by : Thusith Niroshana | T-Lab Studios</P>
+            <iframe  src="https://www.youtube.com/embed/EqkdCfSVRlg?si=psZVV_CflAstScHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Vise Vise (විසේ විසේ) - Centigradz | Official Music Video</h2>
+             <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana | Mix & Mastered By Thusith Niroshana  </P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/9fGMxM92fQY?si=MWiI3cG-wBTXhbn1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" class="items-center justify-center" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-2">Sindagana (සිදඟන) Manjula Pushpakumara | Official Music Video | Sinhala Songs</h2>
-            <P class="text-xs text-gray-500 mb-2">Music - Thusith Niroshana | T-Lab Studios </P>
+            <iframe src="https://www.youtube.com/embed/4G457XjSOTs?si=AkEyfHeiF0zvc0vg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>             
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Dangakari (සිත ඔබ ගාව රැදුනේ) - Centigradz | Official Music Video</h2>
+            <P class="text-xs text-gray-500 mb-2">Melody & Music - Thusith Niroshana | Lyrics - Thusith Niroshana</P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/daItj81IDMs?si=x6uLv0k0XCkvoTbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-2">Sindagana (සිදඟන) Manjula Pushpakumara | Official Music Video | Sinhala Songs</h2>
-            <P class="text-xs text-gray-500 mb-2">Remix by - Thusith Niroshana | T-Lab Studios  </P>
+            <iframe src="https://www.youtube.com/embed/UKORGvuyyII?si=6LDkQUpxYdPCowEf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4">සෙන්ටිග්‍රේඩ්ස් එක්ක අවුරුදු |CENTIGRADZ Avurudu Song Collection</h2>
+            <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana </P>
           </div>
       </div>
-      <a class="text-xs text-gray-300 text-center px-6 m-3" href="https://youtube.com/playlist?list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB&feature=shared">Click here to for more original songs</a
+      <a class="text-xs text-gray-300 text-center px-6 m-3" href="https://www.youtube.com/playlist?list=PLc9zDvEQ-YwRkk8vBMjI5aO6Mw3yuvTBn">Click here to for more original songs</a
   </div>
   
   </section>
