--- a/home/templates/ourproduction.html
+++ b/home/templates/ourproduction.html
@@ -56,8 +56,9 @@
       crafting captivating TV commercials (TVCs) and producing memorable songs, showcasing our ability to blend
       creativity and storytelling in both visual and auditory realms</p>
   </div>
+  <h1 class="px-14 py-3 text-4xl font-bold  mb-5 text-white">Audio Productions</h1>
   <section class="section border-b border-orange-500">
-    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mb-5 text-white">TV Commercial Soundtrack Productions</h3>
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mb-5 text-white">TV Commercial Soundtrack Productions</h3>
     <div class="container mx-auto p-4 px-8">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
@@ -91,12 +92,14 @@
             <P class="text-xs text-gray-500 mb-2">Music | Thusith Niroshana (T-Lab)</P>
           </div>
       </div>
-      <a class="text-xs text-gray-300 text-center px-6 m-3" href="https://youtube.com/playlist?list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB&si=syWmkVqSQ8iTKDyI">Click here to for more TVC</a>
+      <div class="flex justify-center items-center">
+      <a class="text-sm text-orange-400 text-center px-6 m-5" href="https://youtube.com/playlist?list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB&si=syWmkVqSQ8iTKDyI">Click here to more...</a>
+    </div>
   </div>
   
   </section>
-  <section class="section border-b border-orange-500">
-    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mt-3 mb-5 text-white">Original Songs</h3>
+  <section class="section border-b  border-orange-500">
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mt-3 mb-5 text-white">Original Songs</h3>
     <div class="container mx-auto p-4 px-8">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
         <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
@@ -105,9 +108,9 @@
            <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana | T-Lab studios </P>
         </div>
         <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-          <iframe  src="https://www.youtube.com/embed/1Cbohsb8cp0?si=wVWJRMT2iD2GS5a9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>          
-          <h2 class="text-xs text-gray-300 mt-4 font-bold">Billa One Shot ( බිල්ලා ) - CENTIGRADZ</h2>
-           <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana | Mix & Mastered By Thusith Niroshana  </P>
+          <iframe  src="https://www.youtube.com/embed/PFNNSInOuuM?si=sUpw6yaCI3C299nt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>          
+           <h2 class="text-xs text-gray-300 mt-4 font-bold">Hadakari Naari - Dinesh gamage / Kaizer kaiz (Official Music Video)</h2>
+           <P class="text-xs text-gray-500 mb-2"> Music Produced By Thusith Niroshana </P>
         </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
             <iframe src="https://www.youtube.com/embed/eAPcXyJyi9U?si=ntJvAsfuStRKgDpz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -130,12 +133,14 @@
             <P class="text-xs text-gray-500 mb-2">Melody & Music : Thusith Niroshana </P>
           </div>
       </div>
-      <a class="text-xs text-gray-300 text-center px-6 m-3" href="https://www.youtube.com/playlist?list=PLc9zDvEQ-YwRkk8vBMjI5aO6Mw3yuvTBn">Click here to for more original songs</a>
+      <div class="flex justify-center items-center">
+      <a class="text-sm text-orange-400 text-center px-6 m-5" href="https://www.youtube.com/playlist?list=PLc9zDvEQ-YwRkk8vBMjI5aO6Mw3yuvTBn">Click here to more...</a>
+      </div>
   </div>
   
   </section>
-  <section class="section border-b border-orange-500">
-    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mt-3 mb-5 text-white">Films and Teledrama theme songs</h3>
+  <section class="section ">
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mt-3 mb-5 text-white">Films and Teledrama theme songs</h3>
     <div class="container mx-auto p-4 px-8">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
@@ -173,8 +178,68 @@
   </div>
   
   </section>
-    
-
+  <h1 class="px-14 py-3 text-4xl font-bold  my-5 text-white">Video Productions</h1>
+  <section class="section border-b  border-orange-500">
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mb-5 text-white">Music Video</h3>
+    <div class="container mx-auto p-4 px-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/4G457XjSOTs?si=AkEyfHeiF0zvc0vg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>             
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Dangakari (සිත ඔබ ගාව රැදුනේ) - Centigradz | Official Music Video</h2>
+            <P class="text-xs text-gray-500 mb-2">Production House - T-Lab Studios | Film by : Theev Abey</P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe  src="https://www.youtube.com/embed/1Cbohsb8cp0?si=wVWJRMT2iD2GS5a9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>          
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Billa One Shot ( බිල්ලා ) - CENTIGRADZ</h2>
+             <P class="text-xs text-gray-500 mb-2">Production House : T -Lab Studios | Film by : Theev Abey</P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/lKPkx0d-glg?si=asS4j18vFZSf6AP3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4">Ran Dakaththen ( රන් දෑකැත්තෙන් ) Sooraya Mangalyaya 2019</h2>
+            <P class="text-xs text-gray-500 mb-2">DIRECTOR : Chothira Shanaka</P>
+          </div>
+          <!-- <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/hLOd46ecJvw?si=n5bzD8KWCZs_YmHa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Maliban White Chocolate Puff Chocolate Puff Tvc </h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-LAB Studios </P>
+          </div> -->
+      </div>
+  </div>
+  </section>
+  <section class="section border-b border-orange-500">
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mb-5 text-white">Commercials</h3>
+    <div class="container mx-auto p-4 px-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/myPDsn1KtlU?si=QHHjfk2Kl_PlwxZG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">අලුත් එක | Aluth eka - Centigradz</h2>
+            <P class="text-xs text-gray-500 mb-2">Production House - T-Lab Studios </P>
+          </div>
+          <!-- <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/hLOd46ecJvw?si=n5bzD8KWCZs_YmHa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Maliban White Chocolate Puff Chocolate Puff Tvc </h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-LAB Studios </P>
+          </div> -->
+      </div>
+  </div>
+  </section>
+  <section class="section border-b border-orange-500">
+    <h3 class="px-14 py-3 text-xl font-bold text-orange-500 mb-5 text-white">Teledrama</h3>
+    <div class="container mx-auto p-4 px-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/videoseries?si=jaxJl4OWOd1rTlRA&amp;list=PLWgTYyjN_6zyu1DhxxeL-pOrq6iZVbSMB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Labandiye Teledrama- ලබැඳියේ ටෙලිනාට්‍යය</h2>
+            <P class="text-xs text-gray-500 mb-2">Production House - T-Lab Studios </P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/videoseries?si=zL58nxFvxMQJcRs2&amp;list=PLWgTYyjN_6zxYSQrtn0q7D9NAZD-uC5Lg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-2">Konkala Doni Sinhala Teledrama  </h2>
+            <P class="text-xs text-gray-500 mb-2">Production House - T-Lab Studios </P>
+          </div>
+      </div>
+  </div>
+  </section>
 
 
 
