--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -74,7 +74,7 @@
                         class="fab fa-instagram"></i></a>
             </div>
         </div>
-        <p>&copy; 2023 T-Lab Studio. Designed by <a href="https://www.coolmotion.com">CoolMotion</a></p>
+        <p class="text-xs text-gray-200">&copy; 2023 T-Lab Studio. Designed by <a href="https://www.coolmotion.com">CoolMotion</a></p>
     </footer>
     <script>
         $(document).ready(function () {
