--- a/home/templates/ourproduction.html
+++ b/home/templates/ourproduction.html
@@ -51,7 +51,7 @@
   </style> 
 <section id="our-works" class="pt-10">
   <div class="animated-text">
-    <h2 class="text-5xl font-bold text-white text-center pt-10">Our Productions</h2>
+    <h2 class="text-5xl font-bold text-white text-center px-3 pt-10">Our Productions</h2>
     <p class="text-gray-500 p-8 text-center" style="padding: 1vw 5vw">We've mastered the art of
       crafting captivating TV commercials (TVCs) and producing memorable songs, showcasing our ability to blend
       creativity and storytelling in both visual and auditory realms</p>
