--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -14,7 +14,8 @@
             <div class="tab cursor-pointer bg-orange-500 text-white rounded-full px-4 py-2" onclick="filterProducts('all')">All Products</div>
             <div class="tab cursor-pointer" onclick="filterProducts('audio')">Audio</div>
             <div class="tab cursor-pointer" onclick="filterProducts('video')">Video </div>
-            <div class="tab cursor-pointer" onclick="filterProducts('video')">Merch </div>
+            <div class="tab cursor-pointer" onclick="filterProducts('video')">Merchandising</div>
+            <div class="tab cursor-pointer" onclick="filterProducts('video')">Used</div>
         </div>
     
         <div class="flex items-center mx-4 ">
